[tool.poetry]
name = "version_buddy"
version = "0.0.1"
description = "A tool for software development version operations"
authors = ["Simon Otter <skurmedel@gmail.com>"]
license = "MIT-0"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
